--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
     <canvas id="canvasEntities" width="640" height="480"></canvas>
 </div>
 
+<script src="js/enemy.js"></script>
+<script src="js/player.js"></script>
+<script src="js/bullet.js"></script>
+<script src="js/obstacle.js"></script>
 <script src="game.js"></script>
 
 </body>
